compare employee
