# public/swagger/swagger.json
@@ -367,6 +367,46 @@
 					}
 				}
 			}
+		},
+		"/api/employee/compareEmployeeFeedback": {
+			"get": {
+				"operationId": "CompareEmployeeFeedback",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IResponse"
+								}
+							}
+						}
+					}
+				},
+				"description": "Compare two employees' feedback",
+				"tags": [
+					"Employees"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "employee1Id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "employee2Id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
 		}
 	},
 	"servers": [
